# intent-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TASK.md  pyproject.toml
src/intent_service/: __main__.py  app.py  config.py
src/intent_service/adapter/input/: http_intent_api.py
src/intent_service/adapter/output/: lr_jina_intent_model.py
src/intent_service/domain/: models.py
src/intent_service/port/input/: intent.py
src/intent_service/port/output/: intent_model.py
src/intent_service/service/: intent_service.py
tests/: __init__.py  conftest.py  test_intent_api_integration.py
train/: c_test.csv  c_train.csv  eda.ipynb  embeddings.ipynb  tf_idf.ipynb  zero_shot.ipynb
weights/: logistic_regression.pkl  lr_jina_model.pkl  tfidf_vectorizer.pkl
